tests/data/simple-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: my-host.com
      http:
        paths:
        - path: /
          backend:
            serviceName: my-service
            servicePort: 80
